@@ -152,6 +152,12 @@
                 <configuration>
                     <mainClass>tn.esprit.main.MainFX</mainClass>
                     <classpathScope>compile</classpathScope>
+                    <arguments>
+                        <argument>--module-path</argument>
+                        <argument>${user.home}/.m2/repository/org/openjfx/javafx-base/21.0.2:${user.home}/.m2/repository/org/openjfx/javafx-controls/21.0.2:${user.home}/.m2/repository/org/openjfx/javafx-fxml/21.0.2:${user.home}/.m2/repository/org/openjfx/javafx-graphics/21.0.2:${user.home}/.m2/repository/org/openjfx/javafx-media/21.0.2:${user.home}/.m2/repository/org/openjfx/javafx-web/21.0.2</argument>
+                        <argument>--add-modules</argument>
+                        <argument>javafx.controls,javafx.fxml,javafx.media,javafx.web</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
